corrected some layout issues

--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
 body{
     overflow-x: hidden;
+    margin: .5rem 1rem;
 }
 
 .box{
